# saltyrtc-task-relayed-data-rs

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
examples/: initiator.rs  testclient.rs
ffi/: CHANGELOG.md  Cargo.toml  README.md  build.rs  meson.build  saltyrtc_task_relayed_data_ffi.h
ffi/src/: lib.rs  saltyrtc_client_ffi.rs
ffi/tests/: disconnect.c  integration.c  integration.rs  tests.c
src/: lib.rs
tests/: integration.rs
