[package]
name = "saltyrtc-task-relayed-data"
version = "0.1.0"
authors = ["Danilo Bargen <danilo.bargen@threema.ch>"]

[dependencies]
clippy = { version = "*", optional = true }
failure = "0.1"
log = "0.3"
saltyrtc-client = "0.5.0"
tokio-core = "0.1"

[dev-dependencies]
byteorder = "1.2"
data-encoding = "2.1"
env_logger = "0.5"
tokio-timer = "0.1"
clap = "2.30"
qrcodegen = "1.2"

[features]
msgpack-debugging = ["saltyrtc-client/msgpack-debugging"]
